@@ -167,6 +167,10 @@ public:
 		return reader.isClosed();
 	}
 
+    void setReplier(PortReader& reader) {
+        this->reader.setReplier(reader);
+    }
+
     /**
      * this method will be called with new data, as long as you've
      * requested this be done by calling useCallback()
