@@ -175,6 +175,7 @@ void PortCoreInputUnit::run() {
                         bw.appendLine("This is a YARP port.  Here are the commands it responds to:");
                         bw.appendLine("*       Gives a description of this port");
                         bw.appendLine("d       Signals the beginning of input for the port's owner");
+                        bw.appendLine("D       The same as \"d\" except any reply should be suppressed");
                         bw.appendLine("q       Disconnects");
                         bw.appendLine("i       Interrupt parent process (unix only)");
                         bw.appendLine("r       Reverse connection type to be a reader");
